2004-11-07  Robert Schuster <thebohemian@gmx.net>

	Tests for bug #10938:
	gnu/testlet/java/beans/Introspector/getBeanInfo2.java:
	new file

	gnu/testlet/java/beans/Introspector/getBeanInfoTestClass.java:
	extended documentation for getBeanInfo2 test

	gnu/testlet/java/beans/Introspector/getBeanInfo.java:
	unified checkpoint labels

2004-11-07  Robert Schuster <thebohemian@gmx.net>
	
	Splits tests:
	* gnu/testlet/java/beans/DescriptorTest.java:
	removed, replaced by following 3 files
	* gnu/testlet/java/beans/MethodDescriptor/constructorTest1.java:
	new file, added documentation, copyright
	* gnu/testlet/java/beans/EventSetDescriptor/constructorTest1.java:
	new file, added documentation, copyright
	* gnu/testlet/java/beans/PropertyDescriptor/constructorTest1.java:
	new file, added documentation, copyright
	* gnu/testlet/java/beans/PropertyDescriptorTest.java:
	removed, replaced by following file
	* gnu/testlet/java/beans/PropertyDescriptor/constructorTest2.java:
	added documentation, copyright, fixed indentation

2004-11-07  Noa Resare  <noa@resare.com>

	* gnu/testlet/java/awt/geom/GeneralPath/contains.java:
	New tests, adapted from java/awt/Polygon/contains.java.

2004-11-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/testlet/java/util/Currency/
	(Canada.java): New class of tests for the Canadian currency.
	(CanadaFrench.java): New class of tests for the French Canadian currency.
	(China.java): New class of tests for the Chinese currency.
	(Constructors.java): New class of tests for the currency constructors (getInstance())
	(France.java): New class of tests for the French currency.
	(Germany.java): New class of tests for the German currency.
	(Italy.java): New class of tests for the Italian currency.
	(Japan.java): New class of tests for the Japanese currency.
	(Korea.java): New class of tests for the Korean currency.
	(PRC.java): New class of tests for the People's Republic of China's currency.